--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -11,10 +11,13 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills float-right">
+            {{#if user}}
             <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/users/logout">Logout</a></li>
+            {{else}}
             <li class="nav-item"><a class="nav-link" href="/users/login">Login</a></li>
             <li class="nav-item"><a class="nav-link" href="/users/register">Register</a></li>
-            <li class="nav-item"><a class="nav-link" href="/users/logout">Logout</a></li>
+            {{/if}}
           </ul>
         </nav>
         <h3 class="text-muted">OurAudio</h3>
@@ -36,7 +39,6 @@
             {{error}}
           </div>
           {{/if}}
-          
           {{{body}}}
         </div>
       </div>
