--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -20,7 +20,13 @@
             {{/if}}
           </ul>
         </nav>
-        <h3 class="text-muted">OurAudio</h3>
+        <div>
+          <a href="/users/login" class="nav float-left">
+            <img id="frontlogo" src="../public/images/OurAudio_logo.png" height="50" width="50">
+          </a>
+          <h3 class="text-muted">OurAudio</h3>
+        </div>
+
       </div>
       <div class="row">
         <div class="col-lg-12">
