--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -21,7 +21,7 @@
           </ul>
         </nav>
         <div>
-          <a href="/users/login" class="nav float-left">
+          <a href="/" class="nav float-left">
             <img id="frontlogo" src="../public/images/OurAudio_logo.png" height="50" width="50">
           </a>
           <h3 class="text-muted">OurAudio</h3>
