--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -54,6 +54,9 @@
       </footer>
 
     </div> <!-- /container -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="/lib/bootstrap.js"></script>
+    <script src="/js/login.js"></script>
 
   </body>
 </html>
