--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,42 @@
-<h2 class="page-header">Home</h2>
-<p>
-  Welcome to OurAudio
-</p>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <link rel="icon" href="../../favicon.ico">
+    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <link href="jumbotron-narrow.css" rel="stylesheet">
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="header clearfix">
+        <h2 class="text-muted">{{user.name}}</h2>
+      </div>
+
+      <div class="jumbotron">
+        <h2>Add Song!</h2>
+        <p>
+          <a class="btn btn-success" href="#" role="button">Upload File</a>
+          <a class="btn btn-warning" href="#" role="button">SoundCloud</a>
+        </p>
+      </div>
+      <div class="row marketing">
+        <div class="col-lg-12">
+          <h4>Subheading</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
+      </div>
+    </div> <!-- /container -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
+</html>
