--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -5,6 +5,7 @@
     <title>OurAudio</title>
     <link rel="stylesheet" href="/css/bootstrap.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="icon" href="public/images/favicon.ico">
   </head>
   <body>
     <div class="container">
