Changed routes configuration, working on structuring database to upload files for each user. Next, start actually implementing code for uploading files.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,13 +3,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="icon" href="../../favicon.ico">
-    <title>Narrow Jumbotron Template for Bootstrap</title>
-    <link href="jumbotron-narrow.css" rel="stylesheet">
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <title>OurAudio</title>
   </head>
   <body>
     <div class="container">
@@ -20,8 +16,8 @@
       <div class="jumbotron">
         <h2>Add Song!</h2>
         <p>
-          <a class="btn btn-success" href="#" role="button">Upload File</a>
-          <a class="btn btn-warning" href="#" role="button">SoundCloud</a>
+          <a class="btn btn-success" href="" role="button">Upload File</a>
+          <a class="btn btn-warning" href="" role="button">SoundCloud</a>
         </p>
       </div>
       <div class="row marketing">
@@ -29,7 +25,6 @@
           <h4>Song List</h4>
         </div>
       </div>
-    </div> <!-- /container -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    </div>
   </body>
 </html>
