--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -13,7 +13,7 @@
         <nav>
           <ul class="nav nav-pills float-right">
             {{#if user}}
-            <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" href="/user">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/users/logout">Logout</a></li>
             {{else}}
             <li class="nav-item"><a class="nav-link" href="/users/login">Login</a></li>
@@ -55,6 +55,7 @@
       </footer>
 
     </div> <!-- /container -->
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="/lib/bootstrap.js"></script>
     <script src="/js/login.js"></script>
