Revised SDP and working on uploading files onto app.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,8 +16,7 @@
       <div class="jumbotron">
         <h2>Add Song!</h2>
         <p>
-          <a class="btn btn-success" href="" role="button">Upload File</a>
-          <a class="btn btn-warning" href="" role="button">SoundCloud</a>
+          <label class="btn btn-success btn-file"> Upload File <input type="file" style="display: none;"></label>
         </p>
       </div>
       <div class="row marketing">
