--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -13,7 +13,8 @@
         <nav>
           <ul class="nav nav-pills float-right">
             {{#if user}}
-            <li class="nav-item"><a class="nav-link active" href="/user">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/user">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/stream">Stream</a></li>
             <li class="nav-item"><a class="nav-link" href="/users/logout">Logout</a></li>
             {{else}}
             <li class="nav-item"><a class="nav-link" href="/users/login">Login</a></li>
