Added Stream page to have all the songs uploaded by users to show up there.

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -23,7 +23,7 @@
           </ul>
         </nav>
         <div>
-          <a href="/" class="nav float-left">
+          <a href="/user" class="nav float-left">
             <img id="frontlogo" src="../public/images/OurAudio_logo.png" height="50" width="50">
           </a>
           <h3 class="text-muted">OurAudio</h3>
