--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,13 +22,13 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">Upload File</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body">
-                <form>
+                <form method="post" action="/users/upload">
                   <div class="form-group row">
                     <label for="example-text-input" class="col-2 col-form-label">Title</label>
                     <div class="col-10">
