--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                <form method="post" action="/users/upload">
+                <form method="POST" action="/user/upload" enctype="multipart/form-data">
                   <div class="form-group row">
                     <label for="example-text-input" class="col-2 col-form-label">Title</label>
                     <div class="col-10">
@@ -43,7 +43,7 @@
                   </div>
                   <div class="form-group">
                     <label for="exampleInputFile">File input</label>
-                    <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+                    <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp" name="avatar">
                   </div>
                   <div class="form-check">
                     <label class="form-check-label">
@@ -51,7 +51,7 @@
                       Request Feedback
                     </label>
                   </div>
-                  <button type="submit" class="btn-sm btn-primary">Submit</button>
+                  <input type="submit" class="btn-sm btn-primary" value="Submit"></input>
                 </form>
               </div>
             </div>
