--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -60,7 +60,40 @@
       </div>
       <div class="row marketing">
         <div class="col-lg-12">
-          <h4>Song List</h4>
+          <div class="header clearfix">
+            <h2 class="text-muted">Song List</h2>
+          </div>
+          <br />
+          <h5>John Doe</h5><h6>Song</h6>
+          <audio controls="True" preload="auto"><source src="http://localhost:3000/user/upload/Martin%20Garrix%20&amp;%20Brooks%20-%20BYTE%20(Original%20Mix).mp3" type="audio/mpeg"></audio>
+          <br />
+          <br />
+          <button type="button" class="btn btn-outline-primary">Feedback Request</button>
+        </div>
+      </div>
+      <div>
+        <div class="col-lg-12">
+        <div class="header clearfix">
+          <h2 class="text-muted">Awaiting Requests</h2>
+          <br />
+          <button id="toggle" onclick="here()" type="button" class="btn btn-outline-primary">View Requests</button>
+            <script>
+                function here(){
+                  if (myFunction()){
+                    var change = document.getElementById("toggle1");
+                  }
+                }
+                function myFunction() {
+                  var change = document.getElementById("toggle");
+                  if (change.innerHTML == "View Requests"){
+                      change.innerHTML = "Close Requests";
+
+                  } else {
+                      change.innerHTML = "View Requests";
+                  }
+                }
+            </script>
+        </div>
         </div>
       </div>
     </div>
