--- a/views/stream.handlebars
+++ b/views/stream.handlebars
@@ -6,5 +6,13 @@
   </head>
   <body>
     <h4> Stream </h4>
+    <br />
+    <h5>John Doe</h5><h6>Song</h6>
+    <audio controls="True" preload="auto"><source src="http://localhost:3000/user/upload/Martin%20Garrix%20&amp;%20Brooks%20-%20BYTE%20(Original%20Mix).mp3" type="audio/mpeg"></audio>
+      <div class="alert alert-success" role="alert">
+        <h4 class="alert-heading">Well done!</h4>
+        <p>Aww yeah, this song is amazing. The arrangment and creativity is on point... However, I will still work on the mixdown and mastering of the track </p>
+        <p class="mb-0">If you have any questions DM me and I will assist you.</p>
+      </div>
   </body>
 </html>
